[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ity-mvp"
version = "0.1.0"
description = "Info-to-You (ITY) MVP: aggregation + real-time intelligence platform"
authors = [{name = "ITY MVP", email = "founder@example.com"}]
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.111.0",
	"uvicorn[standard]>=0.30.0",
	"pydantic>=2.8.0",
	"httpx>=0.27.0",
	"jinja2>=3.1.4",
	"python-dateutil>=2.9.0.post0",
	"orjson>=3.10.7",
	"rapidfuzz>=3.9.6",
	"beautifulsoup4>=4.12.3",
	"lxml>=5.2.2"
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"